#168 upgrade java/gradle/quarkus